--- a/modules/user/public/translations/en/passwords.yml
+++ b/modules/user/public/translations/en/passwords.yml
@@ -6,6 +6,7 @@ en:
     login: Login
     register: Register
     reset_password: Email an authentication link
+    edit: Reset Password
     email: Email
     email_desc: Enter your registered email and we will send you a link to reset your password
     reset_password_title: Reset password
