--- a/modules/user/public/translations/en/passwords.yml
+++ b/modules/user/public/translations/en/passwords.yml
@@ -10,14 +10,4 @@ en:
     email: Email
     email_desc: Enter your registered email and we will send you a link to reset your password
     reset_password_title: Reset password
-
-  emails:
-    passwords:
-      reset:
-        subject: Reset password
-        title: Password reset request
-        cta: Reset password
-        cta_button: Go to reset password form
-        content: It seems that you requested a password reset. To proceed use the
-          following button.
-        ignore: If it wasn’t you who requested this just ignore this message.
+    expired_link: The reset password link you’ve entered is invalid or has expired.
