--- a/modules/user/public/translations/en/passwords.yml
+++ b/modules/user/public/translations/en/passwords.yml
@@ -3,6 +3,8 @@ en:
     password: Password
     password_confirmation: Confirm password
     password_update: Update password
+    new_password: New password
+    confirm_password: Confirm new password
     login: Login
     register: Register
     reset_password: Email an authentication link
@@ -11,3 +13,5 @@ en:
     email_desc: Enter your registered email and we will send you a link to reset your password
     reset_password_title: Reset password
     expired_link: The reset password link you’ve entered is invalid or has expired.
+    remembered_password: You've remembered the password?
+    forgot: Forgot password?
