--- a/modules/user/public/translations/en/users.yml
+++ b/modules/user/public/translations/en/users.yml
@@ -2,5 +2,5 @@ en:
   users:
     new:
       create_account: Create an Account
-      already_have_account: Already have an account? <a href="/sessions/new">Sign in</a>
+      already_have_account: Already have an account? <a href="/sessions/new">Log in</a>
     logout: Log out
