--- a/modules/user/public/translations/en/passwords.yml
+++ b/modules/user/public/translations/en/passwords.yml
@@ -4,7 +4,7 @@ en:
     password_confirmation: Confirm password
     password_update: Update password
     new_password: New password
-    confirm_password: Confirm new password
+    confirm_new_password: Confirm new password
     login: Login
     register: Register
     reset_password: Email an authentication link
