--- a/modules/common-styling/public/translations/en.yml
+++ b/modules/common-styling/public/translations/en.yml
@@ -1,3 +1,15 @@
 en:
   toast:
     close: Dismiss notification
+  password:
+    weak: Weak password
+    medium: Fair password
+    strong: Strong password
+    toggle_visibility: Toggle password visibility
+  form:
+    select: Select
+    type_to_filter: Type to filter the list
+    no_filter_results: Nothing matches your search
+    clear_selection: Clear selection
+    deselect: Deselect
+    at_least_one_option: At least one option must be choosen
